resolve master models issue

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -8,7 +8,7 @@
 
             <div class="columns is-centered">
                 <div class="column is-one-quarter-desktop is-centered">
-                    <p class="libre is-size-3">Hafta</p>
+                    <p class="libre is-size-3">Pay Minds</p>
                     <br>
                     <p class=" is-size-5">Hello. <br>
                         Please Signup with a key.</p>
