--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -9,7 +9,7 @@
             <div class="navbar-brand has-background-black ">
                 <a class="navbar-item " href="{{url_for('main.home')}}" style="font-weight:bold;">
                     <div class="">
-                        <p class="is-size-4 libre has-text-white has-text-weight-light">Hafta</p>
+                        <p class="is-size-4 libre has-text-white has-text-weight-light">Pay Minds</p>
                     </div>
 
                 </a>
@@ -115,7 +115,7 @@
             id="mainmenu">
             <div id="side-menu" class="is-sidebar-menu">
                 <div>
-                    <p class="libre is-size-4 has-text-white" style="margin-bottom : 2rem; padding-left: 1rem">Hafta</p>
+                    <p class="libre is-size-4 has-text-white" style="margin-bottom : 2rem; padding-left: 1rem">Pay Minds</p>
 
                 </div>
 
