--- a/app/templates/base/head.html
+++ b/app/templates/base/head.html
@@ -1,8 +1,8 @@
 <head>
     {% if subtitle %}
-    <title>Hafta - {{subtitle}}</title>
+    <title>PayMinds - {{subtitle}}</title>
     {% else %}
-    <title>Hafta</title>
+    <title>PayMinds</title>
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
