--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,7 +9,7 @@
 
             <div class="columns is-centered">
                 <div class="column is-one-quarter-desktop is-centered">
-                    <p class="libre is-size-3">Hafta</p>
+                    <p class="libre is-size-3">Pay Minds</p>
                     <br>
                     <p class=" is-size-5">Welcome back. <br>
                         Please login in to continue</p>
